Fixed smooth scroll E ajustes diversos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <img width="100%" height="100%" src="assets/images/Angra TechNotWhite.png" alt="">
+                <a href="#">
+                    <img width="100%" height="100%" src="assets/images/Angra TechNotWhite.png" alt="">
+                </a>
             </div>
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             <ul class="mainMenu">
@@ -31,158 +33,141 @@
     </header>
 
     <!-- Conteudo Principal -->
-    
-    <!-- primeiro banner -->
-    <div>
-        <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
-    </div>
-    <!-- texto Principal -->
-    <div class="fundo-imagem">
-        <div id="sobre" class="textoBranco margem-lado margem-baixo">
-            <br><br>
-            <h2 class="centro margem-baixo">ANGRA TECH</h2>
-            <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
-            <br>
-            <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
-            <br>
-            <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
-            <br>
-            <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
-            <br>
-            <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
-            <br>
-            <!-- 
-                <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
-            -->
+        <!-- primeiro banner -->
+        <div>
+            <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
         </div>
-    </div>
-    <!-- Palestrantes -->
-    <div id="palestra" class="margem-lado texto">
-        <h2 class="centro margem-baixo">PALESTRANTES</h2>
-        <div class="respBox centro">
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
-                </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
-                </div>
-            </div>
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
-                </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+        <!-- texto Principal -->
+            <div class="fundo-imagem">
+                <div class="idHolder" id="sobre"></div> <!-- segura o id para mapeamento da pagina -->
+                <div class="textoBranco margem-lado margem-baixo">
+                    <br><br>
+                    <h2 class="centro margem-baixo">ANGRA TECH</h2>
+                    <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
+                    <br>
+                    <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
+                    <br>
+                    <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
+                    <br>
+                    <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
+                    <br>
+                    <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
+                    <br>
+                    <!-- 
+                        <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
+                    -->
                 </div>
             </div>
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
+        <!-- Palestrantes -->
+            <div class="margem-lado texto">
+                <div class="idHolderB" id="palestra"></div> <!-- segura o id para mapeamento da pagina -->
+                <h2 class="centro margem-baixo">PALESTRANTES</h2>
+                <div class="respBox centro">
+                    <div class="respItemIcon"><!-- div dos palestrantes -->
+                        <div class="itemLeft centro">
+                            <img width="100%" src="assets/images/blank.png" alt="">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="itemRight">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        </div>
+                    </div>
+                    <div class="respItemIcon"><!-- div dos palestrantes -->
+                        <div class="itemLeft centro">
+                            <img width="100%" src="assets/images/blank.png" alt="">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="itemRight">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        </div>
+                    </div>
+                    <div class="respItemIcon"><!-- div dos palestrantes -->
+                        <div class="itemLeft centro">
+                            <img width="100%" src="assets/images/blank.png" alt="">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="itemRight">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        </div>
+                    </div>
+                    <div class="respItemIcon"><!-- div dos palestrantes -->
+                        <div class="itemLeft centro">
+                            <img width="100%" src="assets/images/blank.png" alt="">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="itemRight">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        </div>
+                    </div>    
                 </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
-                </div>
+                <br><br>
             </div>
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
-                </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
-                </div>
-            </div>
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
-                </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
-                </div>
-            </div>
-            <div class="respItemIcon"><!-- div dos palestrantes -->
-                <div class="itemLeft">
-                    <img width="100%" src="assets/images/blank.png" alt="">
-                    <p>Palestrante</p>
-                </div>
-                <div class="itemRight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
-                </div>
-            </div>     
-        </div>
-        <br><br>
-    </div>
-    <!-- Mapa e local -->
-    <div id="mapa" class="texto margem-lado margem-baixo">
-        <br><br>
-        <h2 class="centro margem-baixo">LOCAL</h2>
-        <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
-        <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
-        <br>
-        <div class="content"><!-- mapa google-->
-            <div class="mapouter"><!-- mapa google -->
-            <div class="gmap_canvas">
-                <iframe width="100%" height="400px" id="gmap_canvas" src="https://maps.google.com/maps?q=centro%20de%20estudos%20ambientais%20angra%20dos%20reis&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                <a href="https://123movies-to.org">123 movies</a>
+        <!-- Mapa e local -->
+            <div class="texto margem-lado margem-baixo">
+                <div class="idHolder" id="mapa"></div> <!-- segura o id para mapeamento da pagina -->
+                <br><br>
+                <h2 class="centro margem-baixo">LOCAL</h2>
+                <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
+                <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
                 <br>
-                <style>
-                    .mapouter{position:relative;text-align:right;height:400px;width:100%;}
-                </style>
-                <a href="https://www.embedgooglemap.net"></a>
-                <style>
-                .gmap_canvas {overflow:hidden;background:none!important;height:400px;width:100%;}
-                </style>
+                <div class="content"><!-- mapa google-->
+                    <div class="mapouter"><!-- mapa google -->
+                    <div class="gmap_canvas">
+                        <iframe width="100%" height="400px" id="gmap_canvas" src="https://maps.google.com/maps?q=centro%20de%20estudos%20ambientais%20angra%20dos%20reis&t=k&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <a href="https://123movies-to.org">123 movies</a>
+                        <br>
+                        <style>
+                            .mapouter{position:relative;text-align:right;height:400px;width:100%;}
+                        </style>
+                        <a href="https://www.embedgooglemap.net"></a>
+                        <style>
+                        .gmap_canvas {overflow:hidden;background:none!important;height:400px;width:100%;}
+                        </style>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- inscrição -->
-    <div id="inscricao" class="texto margem-lado margem-baixo">
-        <br><br>
-        <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
-        <div class="responsiveBox">
-            <div class="responsiveItemCode">
-                <div id="qrcode">
-                    <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
+        <!-- inscrição -->
+            <div class="texto margem-lado margem-baixo">
+                <div class="idHolder" id="inscricao"></div> <!-- segura o id para mapeamento da pagina -->
+                <br><br>
+                <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
+                <div class="responsiveBox">
+                    <div class="responsiveItemCode">
+                        <div id="qrcode">
+                            <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
+                        </div>
+                    </div>
+                    <div class="responsiveItemCode">
+                        <br>
+                        <p>Inscreva-se atraves do código QR ou atraves do link:</p>
+                        <br>
+                        <a href="https://www.sympla.com.br/evento/angra-tech/1698625?qrcode=true">inscreva-se aqui</a>
+                        <br>
+                        <br>
+                        <p>Vagas Limitadas!</p>
+                    </div>
                 </div>
+                <br><br>
             </div>
-            <div class="responsiveItemCode">
-                <br>
-                <p>Inscreva-se atraves do código QR ou atraves do link:</p>
-                <br>
-                <a href="https://www.sympla.com.br/evento/angra-tech/1698625?qrcode=true">inscreva-se aqui</a>
-                <br>
-                <br>
-                <p>Vagas Limitadas!</p>
+        <!-- colaboradores -->
+            <div class="margem-lado texto">
+                <div class="idHolderB" id="apoio"></div> <!-- segura o id para mapeamento da pagina -->
+                <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
+                <div class="respBox">
+                    <div class="respItemLogo">
+                        <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
+                    </div>
+                    <div class="respItemLogo">
+                        <img width="100%" height="100%" src="assets/images/inocolum.png">
+                    </div>
+                    <div class="respItemLogo">
+                        <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
+                    </div>
+                </div>
+                <br><br><br><br><br><br>
+                <hr width="100%">
             </div>
-        </div>
-        <br><br>
-    </div>   
-    <!-- colaboradores -->
-    <div id="apoio" class="margem-lado texto">
-        <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
-        <div class="respBox">
-            <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
-            </div>
-            <div class="respItemLogo">
-                <img width="100%" height="100%" src="assets/images/inocolum.png">
-            </div>
-            <div class="respItemLogo">
-                <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
-            </div>
-            <div class="respItemLogo">
-                <img width="100%" height="100%" src="assets/images/sdeBleck.png">
-            </div>
-        </div>
-        <br><br><br><br><br><br>
-        <hr width="100%">
-    </div>
     <!--footer-->
     <div class="texto centro">
         <div class="responsiveBox">
@@ -196,16 +181,16 @@
                     <li>REDES SOCIAIS</li>
                     <br>
                     <li>
-                        <a href="#" class="branco fa fa-instagram"></a>
+                        <a href="#"><i class="fa fa-camera-retro"></i></a>
                     </li>
                     <li>
-                        <a href="#" class="branco fa fa-envelope"></a>
+                        <a href="#"><i class="fa fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
         </div>
         <span>
-            <p class="centro">(24)-3377-4507 / des.economico@angra.rj.gov.br</p>
+            <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / des.economico@angra.rj.gov.br<i class="fa fa-envelope"></i></p>
         </span>
     </div>
     <br>
