Correção de cor e fonte

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <div class="idHolder" id="sobre"></div> <!-- segura o id para mapeamento da pagina -->
                 <div class="textoBranco margem-lado margem-baixo">
                     <br><br>
-                    <h2 class="centro margem-baixo">ANGRA TECH</h2>
+                    <div class="centro">
+                        <h2 class="gradient-text margem-baixo">ANGRA TECH</h2>
+                    </div>
                     <p> A Prefeitura de Angra dos Reis, possui como um dos objetivos criar estratégias para fomentar o empreendedorismo e inovação na cidade. As tecnologias transformaram a forma como vivemos e consumimos produtos e serviços.</p>
                     <br>
                     <p> Já era esperado que evoluíssemos em diversos meios de forma escalável, é afirmado que todo esse processo foi alavancado no período da pandemia de COVID-19.</p>
@@ -61,7 +63,9 @@
         <!-- Palestrantes -->
             <div class="margem-lado texto">
                 <div class="idHolderB" id="palestra"></div> <!-- segura o id para mapeamento da pagina -->
-                <h2 class="centro margem-baixo">PALESTRANTES</h2>
+                <div class="centro">
+                    <h2 class="gradient-text margem-baixo">PALESTRANTES</h2>
+                </div>
                 <div class="respBox centro">
                     <div class="respItemIcon"><!-- div dos palestrantes -->
                         <div class="itemLeft centro">
@@ -106,7 +110,9 @@
             <div class="texto margem-lado margem-baixo">
                 <div class="idHolder" id="mapa"></div> <!-- segura o id para mapeamento da pagina -->
                 <br><br>
-                <h2 class="centro margem-baixo">LOCAL</h2>
+                <div class="centro">
+                    <h2 class="gradient-text margem-baixo">LOCAL</h2>
+                </div>
                 <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
                 <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
                 <br>
@@ -131,14 +137,16 @@
             <div class="texto margem-lado margem-baixo">
                 <div class="idHolder" id="inscricao"></div> <!-- segura o id para mapeamento da pagina -->
                 <br><br>
-                <h2 class="centro margem-baixo">INSCRIÇÃO</h2>
+                <div class="centro">
+                    <h2 class="gradient-text margem-baixo">INSCRIÇÃO</h2>
+                </div>
                 <div class="responsiveBox">
                     <div class="responsiveItemCode">
                         <div id="qrcode">
                             <img width="200px" height="200px" src="assets/images/qrcode.png" alt="código QR">
                         </div>
                     </div>
-                    <div class="responsiveItemCode">
+                    <div class="responsiveItemCode centro">
                         <br>
                         <p>Inscreva-se atraves do código QR ou atraves do link:</p>
                         <br>
@@ -153,7 +161,9 @@
         <!-- colaboradores -->
             <div class="margem-lado texto">
                 <div class="idHolderB" id="apoio"></div> <!-- segura o id para mapeamento da pagina -->
-                <h2 class="centro margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
+                <div class="centro">
+                    <h2 class="gradient-text margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
+                </div>
                 <div class="respBox">
                     <div class="respItemLogo">
                         <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
