--- a/index.html
+++ b/index.html
@@ -67,42 +67,60 @@
                     <h2 class="gradient-text margem-baixo">PALESTRANTES</h2>
                 </div>
                 <div class="respBox centro">
-                    <div class="respItemIcon"><!-- div dos palestrantes -->
-                        <div class="itemLeft centro">
-                            <img width="100%" src="assets/images/blank.png" alt="">
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
                             <p class="centro" >Palestrante</p>
                         </div>
-                        <div class="itemRight">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
                         </div>
                     </div>
-                    <div class="respItemIcon"><!-- div dos palestrantes -->
-                        <div class="itemLeft centro">
-                            <img width="100%" src="assets/images/blank.png" alt="">
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
                             <p class="centro" >Palestrante</p>
                         </div>
-                        <div class="itemRight">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
                         </div>
                     </div>
-                    <div class="respItemIcon"><!-- div dos palestrantes -->
-                        <div class="itemLeft centro">
-                            <img width="100%" src="assets/images/blank.png" alt="">
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
                             <p class="centro" >Palestrante</p>
                         </div>
-                        <div class="itemRight">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
                         </div>
                     </div>
-                    <div class="respItemIcon"><!-- div dos palestrantes -->
-                        <div class="itemLeft centro">
-                            <img width="100%" src="assets/images/blank.png" alt="">
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
                             <p class="centro" >Palestrante</p>
                         </div>
-                        <div class="itemRight">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quod voluptas quae nemo temporibus corrupti quam! Saepe quasi eum incidunt corporis magni, facere.</p>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
                         </div>
-                    </div>    
+                    </div>
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                        </div>
+                    </div>
+                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
+                        <div class="card-image">
+                            <img src="assets/images/blank.png" alt="palestrante">
+                            <p class="centro" >Palestrante</p>
+                        </div>
+                        <div class="card-text">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                        </div>
+                    </div>
                 </div>
                 <br><br>
             </div>
