--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="logo">
                 <a href="#">
-                    <img width="100%" height="100%" src="assets/images/Angra TechNotWhite.png" alt="">
+                    <img width="240px" height="70px" src="assets/images/Angra TechNotWhite.png" alt="">
                 </a>
             </div>
             <div class="openMenu"><i class="fa fa-bars"></i></div>
@@ -70,7 +70,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -79,7 +81,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -88,7 +92,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -97,7 +103,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -106,7 +114,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -115,7 +125,9 @@
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
                             <img src="assets/images/blank.png" alt="palestrante">
-                            <p class="centro" >Palestrante</p>
+                            <div class="centro">
+                                <p class="gradient-text bold" >Palestrante</p>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
@@ -131,8 +143,8 @@
                 <div class="centro">
                     <h2 class="gradient-text margem-baixo">LOCAL</h2>
                 </div>
-                <h4 class="centro">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
-                <h4 class="centro">Angra dos Reis - RJ - 23907-000</h4>
+                <h4 class="centro gray">Avenida Prefeito Jair Toscano de Brito - Práia da Chácara</h4>
+                <h4 class="centro gray">Angra dos Reis - RJ - 23907-000</h4>
                 <br>
                 <div class="content"><!-- mapa google-->
                     <div class="mapouter"><!-- mapa google -->
