--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
                         <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
                     </div>
                     <div class="respItemLogo">
+                        <img width="100%" height="70%" src="assets/images/papaFood.png" alt="">
+                    </div>
+                    <div class="respItemLogo">
                         <img width="100%" height="100%" src="assets/images/inocolum.png">
                     </div>
                     <div class="respItemLogo">
