--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
                 </div>
                 <div class="respBox">
                     <div class="respItemLogo">
-                        <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo PB.png" alt="">
+                        <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt="">
                     </div>
                     <div class="respItemLogo">
-                        <img width="100%" height="70%" src="assets/images/papaFood.png" alt="">
+                        <img width="100%" height="80%" src="assets/images/papaFood.png" alt="">
                     </div>
                     <div class="respItemLogo">
-                        <img width="100%" height="100%" src="assets/images/inocolum.png">
+                        <img width="100%" height="80%" src="assets/images/inocolum.png">
                     </div>
-                    <div class="respItemLogo">
+                    <div class="respItemLogo" style="margin-top: -7px;">
                         <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
                     </div>
                 </div>
