--- a/index.html
+++ b/index.html
@@ -69,68 +69,44 @@
                 <div class="respBox centro">
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
+                            <img src="assets/images/paulo.jpeg" alt="palestrante">
                             <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
+                                <p class="gradient-text bold" >Paulo Kendzerski</p>
                             </div>
                         </div>
                         <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                            <label>
+                                <input id="btn1" type="checkbox" class="ativa">
+                                <div class="botao">Ler Sobre</div>
+                                <div id="info1" class="informacao">
+                                    <p>
+                                        O Instituto da Transformação Digital, entidade sem fins lucrativos, tem como missão, mobilizar, sensibilizar e promover iniciativas que contribuam para que a sociedade compreenda como a Transformação Digital e a Inovação podem estimular o desenvolvimento social, econômico e sustentável dos negócios, sejam tradicionais ou não. 
+                                O ITD desenvolve estudos de Maturidade Digital das empresas, a partir de uma metodologia inédita e exclusiva, com o objetivo de proporcionar informações para que seus líderes e gestores, possam implementar de forma mais eficiente a Transformação Digital necessária para alavancar os negócios das suas marcas. 
+                                O ITD é composto por um time de especialistas experientes com grande conhecimento do segmento que atuam, para atender todos os tipos de projetos de transformação dos negócios, independente do porte ou segmento, e atende empresas no Brasil, México e Espanha.
+                                    </p>
+                                </div>
+                            </label>
                         </div>
                     </div>
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
+                            <img src="assets/images/beatriz.jpeg" alt="palestrante">
                             <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
+                                <p class="gradient-text bold" >Beatriz Mattiuzzo</p>
                             </div>
                         </div>
                         <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                            <label>
+                                <input id="btn1" type="checkbox" class="ativa">
+                                <div class="botao">Ler Sobre</div>
+                                <div id="info1" class="informacao">
+                                    <p>
+                                        Beatriz Mattiuzzo é oceanógrafa, mestre em Desenvolvimento Sustentável e empreendedora social, tendo fundado a Marulho.
+                                        A Marulho é um negocio socioambiental que atua em Ilha Grande e transforma redes de pesca em novos produtos como bolsas e sacolas, evitando a pesca fantasma e gerando renda em comunidades caiçaras. Acelerada pela Fundação Grupo Boticário, atua nos modelos B2B e B2C,  voltado para sustentabilidades e economia do mar. 
+                                        Maiores Informações no site <a href="https://fazermarulho.com.br/">fazermarulho.</a>  
+                                    </p>
+                                </div>
+                            </label>
                         </div>
                     </div>
                 </div>
