--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             </ul>
         </nav>
     </header>
-
     <!-- Conteudo Principal -->
         <!-- primeiro banner -->
         <div>
@@ -188,6 +187,7 @@
                 <hr width="100%">
             </div>
     <!--footer-->
+</div> 
     <div class="texto centro">
         <div class="responsiveBox">
             <div class="responsiveItem">
